@@ -1,3 +1,4 @@
+default(parisize,"200M")
 isprime(5368962301599408606279497323618896374219)
 isprime(4309513411435775833571)
 isprime(26959946667150639794667015087019630673557916260026308143510066298881)
@@ -14,5 +15,8 @@ ispseudoprime([1,3,4,5],2)
 \\isprime(2^2000+841, 2) 1 min
 \\isprime(2^1600+895, 2) 27s
 isprime(2^1000+297, 2)
-
 isprime(2^256+5721)
+
+isprime(18446744073709551557, 3)
+isprime(437256732647720373392867051041, 3)
+isprime(10^472+69169)
